# traintables

./: .gitignore  Cargo.toml  README.md
.github/workflows/: update-database.yml  update-gtfs-database.yml  update-gtfs.yml  update-siri.yml
core/: Cargo.toml
core/src/: lib.rs
gtfs/: Cargo.toml
gtfs/sql/: cleaning.sql  fts.sql  indexes.sql  schema.sql
gtfs/src/: database.rs  error.rs  main.rs  routes.rs  service_days.rs  stop_times.rs  stops.rs  trips.rs  update.rs
ios/Traintables/: Colors.swift  Localizable.xcstrings  TraintablesApp.swift
ios/Traintables.xcodeproj/: project.pbxproj
ios/Traintables.xcodeproj/project.xcworkspace/xcshareddata/swiftpm/: Package.resolved
ios/Traintables/AppIcon.icon/: icon.json
ios/Traintables/Models/: Arrival.swift  Departure.swift  Station.swift  TripStop.swift
ios/Traintables/Views/: ContentView.swift  DelayIndicator.swift  SearchView.swift  StationTableItem.swift  StationTableView.swift  TripView.swift
netex/: Cargo.toml
netex/src/: location.rs  main.rs  site_frame.rs
netex/src/models/: journey_pattern.rs  mod.rs  station.rs  stop_point_in_journey_pattern.rs
netex/src/service_frame/: journey_patterns.rs  lines.rs  mod.rs  route_points.rs  routes.rs  scheduled_stop_points.rs
netex/src/site_frame/: mod.rs  stop_places.rs  topographic_places.rs
siri/: Cargo.toml
siri/src/: main.rs
supabase/: config.toml
supabase/functions/next-departures/: deno.json  index.ts
supabase/migrations/: 20260223105857_remote_schema.sql  20260223133336_fix_database_functions.sql
