[package]
name = "gtfs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
csv = "1.4.0"
reqwest = { version = "0.12.26", features = ["json"] }
rusqlite = { version = "0.38.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.48.0", features = ["full"] }
uuid = { version = "1.19.0", features = ["v4"] }
zip = "7.0.0"
