[package]
name = "gtfs"
version = "0.1.0"
edition = "2024"

[dependencies]
csv = "1.4.0"
reqwest = { version = "0.12.26", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
zip = { version = "7.0.0", default-features = false, features = ["deflate"] }

[profile.release]
lto = "thin"
panic = "abort"