[package]
name = "gtfs"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.48.0", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
csv = "1.4.0"
reqwest = "0.13.2"
thiserror = "2.0.17"
zip = { version = "7.0.0", default-features = false, features = ["deflate"] }
