[package]
name = "netex"
version = "0.1.0"
edition = "2024"

[dependencies]
traintables-core = { path = "../core" }
tokio = { version = "1.49.0", features = ["full"] }
reqwest = { version = "0.13.2", features = ["stream"] }
anyhow = "1.0.102"
futures = "0.3.32"
tokio-util = "0.7.18"
quick-xml = "0.39.2"
csv = "1.4.0"
serde = { version = "1.0.228", features = ["derive"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
