[package]
name = "siri"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.48.0", features = ["full"] }
tokio-util = "0.7.18"
futures-util = "0.3.32"
reqwest = { version =  "0.13.2", features = ["stream"] }
serde = { version = "1.0.228", features = ["derive"] }
quick-xml = { version = "0.39.2", features = ["async-tokio"] }
csv-async = { version = "1.3.1", features = ["tokio"] }
